cabal-version:      3.0

author:             Joshua Obritsch
bug-reports:        https://github.com/joshua-obritsch/blizzard-watch/issues
build-type:         Simple
category:           Text
copyright:          2022 Joshua Obritsch
description:        A CSS generator for blizzard-html that watches all
                    files in a directory recursively and generates a
                    global CSS file from these.
extra-source-files: CHANGELOG.md
homepage:           https://github.com/joshua-obritsch/blizzard-watch
license:            MIT
license-file:       LICENSE
maintainer:         Joshua Obritsch <joshua@obritsch.com>
name:               blizzard-watch
stability:          Experimental
synopsis:           A CSS generator for blizzard-html.
version:            0.1.0.0

executable blizzard-watch
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    default-language: Haskell2010
    hs-source-dirs:   src
