cabal-version:      3.0

author:             Joshua Obritsch
bug-reports:        https://github.com/joshua-obritsch/blizzard-watch/issues
build-type:         Simple
category:           Text
copyright:          2022 Joshua Obritsch
description:        A CSS generator for blizzard-html that watches all
                    files in a directory recursively and generates a
                    global CSS file from these.
extra-source-files: CHANGELOG.md
homepage:           https://github.com/joshua-obritsch/blizzard-watch
license:            MIT
license-file:       LICENSE
maintainer:         Joshua Obritsch <joshua@obritsch.com>
name:               blizzard-watch
stability:          Experimental
synopsis:           A CSS generator for blizzard-html.
version:            0.1.0.0

executable blizzard-watch
    build-depends:      base          >= 4.0  && <= 5.0
                      , blizzard-html >= 0.1  && <= 0.2
                      , bytestring    >= 0.10 && <= 0.12
                      , clay          >= 0.14 && <= 0.15
                      , fsnotify      >= 0.3  && <= 0.4
                      , hashtables    >= 1.2  && <= 1.3
                      , hint          >= 0.9  && <= 0.10
                      , murmur3       >= 1.0  && <= 2.0
                      , regex-posix   >= 0.96 && <= 1.0
                      , split         >= 0.2  && <= 0.3
                      , text          >= 1.0  && <= 3.0
    default-language:   Haskell2010
    hs-source-dirs:     src
    main-is:            Main.hs
